--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Regimental histories -- Great Britain'
 - !lcsh 'Great Britain. Army. Division, 51st (Highland)'
+- GITenberg
 title: The History of the 51st (Highland) Division 1914-1918
 url: http://www.gutenberg.org/ebooks/45934
